// <auto-generated />
using System;
using Microsoft.EntityFrameworkCore;
using Microsoft.EntityFrameworkCore.Infrastructure;
using Microsoft.EntityFrameworkCore.Migrations;
using Microsoft.EntityFrameworkCore.Storage.ValueConversion;
using Npgsql.EntityFrameworkCore.PostgreSQL.Metadata;
using Shared.Data;

#nullable disable

namespace Shared.Migrations
{
    [DbContext(typeof(ApplicationDbContext))]
    [Migration("20250421161203_Initial")]
    partial class Initial
    {
        /// <inheritdoc />
        protected override void BuildTargetModel(ModelBuilder modelBuilder)
        {
#pragma warning disable 612, 618
            modelBuilder
                .HasAnnotation("ProductVersion", "9.0.3")
                .HasAnnotation("Relational:MaxIdentifierLength", 63);

            NpgsqlModelBuilderExtensions.UseIdentityByDefaultColumns(modelBuilder);

            modelBuilder.Entity("Board", b =>
                {
                    b.Property<int>("Id")
                        .ValueGeneratedOnAdd()
                        .HasColumnType("integer");

                    NpgsqlPropertyBuilderExtensions.UseIdentityByDefaultColumn(b.Property<int>("Id"));

                    b.Property<DateTime>("CreatedAt")
                        .HasColumnType("timestamp with time zone");

                    b.Property<string>("Name")
                        .IsRequired()
                        .HasColumnType("text");

                    b.Property<string>("Type")
                        .IsRequired()
                        .HasColumnType("text");

                    b.HasKey("Id");

                    b.ToTable("Boards", (string)null);
                });

            modelBuilder.Entity("Shared.forme.Forme", b =>
                {
                    b.Property<Guid>("Id")
                        .ValueGeneratedOnAdd()
                        .HasColumnType("uuid");

                    b.Property<int>("BoardId")
                        .HasColumnType("integer");

                    b.Property<string>("position")
                        .IsRequired()
                        .HasColumnType("text");

                    b.HasKey("Id");

                    b.HasIndex("BoardId");

                    b.ToTable("Formes", (string)null);

                    b.UseTptMappingStrategy();
                });

            modelBuilder.Entity("Shared.forme.Carre", b =>
                {
                    b.HasBaseType("Shared.forme.Forme");

                    b.Property<double>("Cote")
                        .HasColumnType("double precision");

                    b.ToTable("Carres", (string)null);
                });

            modelBuilder.Entity("Shared.forme.Cercle", b =>
                {
                    b.HasBaseType("Shared.forme.Forme");

                    b.Property<double>("Rayon")
                        .HasColumnType("double precision");

                    b.ToTable("Cercles", (string)null);
                });

            modelBuilder.Entity("Shared.forme.Rectangle", b =>
                {
                    b.HasBaseType("Shared.forme.Forme");

                    b.Property<double>("Largeur")
                        .HasColumnType("double precision");

                    b.Property<double>("Longueur")
                        .HasColumnType("double precision");

                    b.ToTable("Rectangles", (string)null);
                });

            modelBuilder.Entity("Shared.forme.Triangle", b =>
                {
                    b.HasBaseType("Shared.forme.Forme");

                    b.Property<double>("Cote")
                        .HasColumnType("double precision");

                    b.ToTable("Triangles", (string)null);
                });

            modelBuilder.Entity("Shared.forme.Forme", b =>
                {
                    b.HasOne("Board", null)
                        .WithMany()
                        .HasForeignKey("BoardId")
                        .OnDelete(DeleteBehavior.Cascade)
                        .IsRequired();
                });

            modelBuilder.Entity("Shared.forme.Carre", b =>
                {
                    b.HasOne("Shared.forme.Forme", null)
                        .WithOne()
                        .HasForeignKey("Shared.forme.Carre", "Id")
                        .OnDelete(DeleteBehavior.Cascade)
                        .IsRequired();
                });

            modelBuilder.Entity("Shared.forme.Cercle", b =>
                {
                    b.HasOne("Shared.forme.Forme", null)
                        .WithOne()
                        .HasForeignKey("Shared.forme.Cercle", "Id")
                        .OnDelete(DeleteBehavior.Cascade)
                        .IsRequired();
                });

            modelBuilder.Entity("Shared.forme.Rectangle", b =>
                {
                    b.HasOne("Shared.forme.Forme", null)
                        .WithOne()
                        .HasForeignKey("Shared.forme.Rectangle", "Id")
                        .OnDelete(DeleteBehavior.Cascade)
                        .IsRequired();
                });

            modelBuilder.Entity("Shared.forme.Triangle", b =>
                {
                    b.HasOne("Shared.forme.Forme", null)
                        .WithOne()
                        .HasForeignKey("Shared.forme.Triangle", "Id")
                        .OnDelete(DeleteBehavior.Cascade)
                        .IsRequired();
                });
#pragma warning restore 612, 618
        }
    }
}
